--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./src/style/style.css">
     <title>Portifolio</title>
-    <script src="./src/js/loops.js" parse></script>
+    <script src="./src/js/index.js" parse></script>
 </head>
 
 <body>
